# web_server_cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp  main.h
Common/: Common.h  FileFunctions.h  structs.h
Network/: Server.cpp  Server.h  TestServer.h  client_socket.cpp  client_socket.h  server_socket.cpp  server_socket.h  socket.cpp  socket.h
Network/Routing/: Routing.cpp  Routing.h
Network/Server/: README.md  Server.cpp  Server.h
Network/Server/Persistent/: PersistentServer.cpp  PersistentServer.h
Network/Server/Sequential/: SequentialServer.cpp  SequentialServer.h
Network/Socket/: ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
Server/: Server.cpp  Server.h  TestServer.cpp  server.cpp  server.h  test_server.cpp  test_server.h
Server/Reference/: TempClient.cpp  TempServer.cpp
Server/Routing/: Route.h
Socket/: ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  client_socket.cpp  client_socket.h  server_socket.cpp  server_socket.h  socket.cpp  socket.h
Website/Pages/: 404.html  about.html  index.html  something.html
Website/Pages/that_guy/: about.html  something.html
Website/Source/css/: style.css
